Update Blog “2022-06-25_bbb”

--- a/content/blogPosts/2022-06-25_bbb.md
+++ b/content/blogPosts/2022-06-25_bbb.md
@@ -1,7 +1,7 @@
 ---
 title: bbb
 date: 2022-06-25T23:53:10.132Z
-thumbnail: /static/img/banner-2.png
+thumbnail: /public/static/img/pillfixer.png
 ---
 ## Which herbal mood enhancer is the best for you
 
